added more to home manager

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = mako
 exec-once = hyprpaper
 exec-once = blueman-applet
 exec-once = cliphist wipe && cliphist store
-
+exec-once = nm-applet --indicator
 
 ####################
 ### LOOK & FEEL  ###
